--- a/src/main/webapp/Views/registration.css
+++ b/src/main/webapp/Views/registration.css
@@ -28,6 +28,7 @@ label {
 input[type="text"],
 input[type="email"],
 input[type="password"],
+input[type="tel"],
 select {
     width: calc(100% - 20px);
     padding: 10px;
